--- a/templates/main.html
+++ b/templates/main.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 
 <html lang="en">
 <head>
@@ -6,7 +6,7 @@
 
   <title>My Little Website</title>
   <link rel="stylesheet" href="/static/style.css">
-  <!-- <script src="static/main.js"></script> -->
+  <script src="static/main.js"></script>
 </head>
 
 <body>
@@ -16,5 +16,34 @@
   {% endif %}
   <button id="tester">test</button>
 
+</body>
+</html> -->
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Biryani Hub</title>
+</head>
+<link rel="stylesheet" href="/static/style.css">
+<script src="/static/main.js"></script>
+<body>
+    <h1>The Biryani Hub</h1>
+    <div class="container">
+        <div class="info">
+            <p>Biryani is an amazing cuisine that tastes good and has many different variations available to eat. It's spicy but amazing and one of the best go to dishes to eat.</p>
+            <img src="./static/biryani.jpeg" alt="biryani">
+            <p>Register yourself as a guest to be served the biryani for free</p>
+            <input id = "names" type="text" value="Add Your Name">
+            <!-- <button id="moreInfo" onclick="register()">Register</button> -->
+            <ul id="list" >
+                <li>Sahil Raina</li>
+           </ul>
+        </div>
+    </div>
 </body>
 </html>
