--- a/templates/main.html
+++ b/templates/main.html
@@ -28,6 +28,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Biryani Hub</title>
+    
+    {%if name%}
+    <h1>Hello {{name}}!</h1>
+    {%else%}
+    <h1>Hello, world!</h1>
+    {%endif%}
+
 </head>
 <link rel="stylesheet" href="/static/style.css">
 <script src="/static/main.js"></script>
